--- a/css/style.css
+++ b/css/style.css
@@ -2,10 +2,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Mr+Dafoe&display=swap');
 
 
-* {
-    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-}
-
 h1 {
     color: rgb(62, 62, 62);
     font-size: x-large;
@@ -42,4 +38,8 @@ h2 {
 .title-logo {
     margin-top: 1rem;
     height: 5rem;
+}
+
+.title-logo:hover {
+    height: 4.95rem;
 }
