--- a/css/styleoutput.css
+++ b/css/styleoutput.css
@@ -6,17 +6,15 @@
       "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
     --font-mono: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono",
       "Courier New", monospace;
+    --color-red-400: oklch(0.704 0.191 22.216);
     --color-red-500: oklch(0.637 0.237 25.331);
     --color-amber-50: oklch(0.987 0.022 95.277);
-    --color-amber-100: oklch(0.962 0.059 95.617);
-    --color-amber-200: oklch(0.924 0.12 95.746);
-    --color-amber-500: oklch(0.769 0.188 70.08);
-    --color-amber-700: oklch(0.555 0.163 48.998);
-    --color-black: #000;
+    --color-amber-800: oklch(0.473 0.137 46.201);
+    --color-yellow-400: oklch(0.852 0.199 91.936);
+    --color-blue-400: oklch(0.707 0.165 254.624);
+    --color-violet-500: oklch(0.606 0.25 292.717);
     --spacing: 0.25rem;
-    --container-2xs: 18rem;
     --container-2xl: 42rem;
-    --container-3xl: 48rem;
     --text-lg: 1.125rem;
     --text-lg--line-height: calc(1.75 / 1.125);
     --font-weight-semibold: 600;
@@ -238,59 +236,8 @@
   .sticky {
     position: sticky;
   }
-  .top-7 {
-    top: calc(var(--spacing) * 7);
-  }
-  .top-10 {
-    top: calc(var(--spacing) * 10);
-  }
-  .top-10\/12 {
-    top: calc(10/12 * 100%);
-  }
-  .top-14 {
-    top: calc(var(--spacing) * 14);
-  }
-  .top-16 {
-    top: calc(var(--spacing) * 16);
-  }
-  .top-17 {
-    top: calc(var(--spacing) * 17);
-  }
-  .top-30 {
-    top: calc(var(--spacing) * 30);
-  }
-  .top-32 {
-    top: calc(var(--spacing) * 32);
-  }
-  .top-33 {
-    top: calc(var(--spacing) * 33);
-  }
-  .top-35 {
-    top: calc(var(--spacing) * 35);
-  }
-  .right-0 {
-    right: calc(var(--spacing) * 0);
-  }
-  .right-auto {
-    right: auto;
-  }
-  .bottom-0 {
-    bottom: calc(var(--spacing) * 0);
-  }
-  .bottom-0\.5 {
-    bottom: calc(var(--spacing) * 0.5);
-  }
-  .left-0 {
-    left: calc(var(--spacing) * 0);
-  }
-  .left-1 {
-    left: calc(var(--spacing) * 1);
-  }
   .left-1\/2 {
     left: calc(1/2 * 100%);
-  }
-  .left-auto {
-    left: auto;
   }
   .isolate {
     isolation: isolate;
@@ -406,62 +353,20 @@
       max-width: 96rem !important;
     }
   }
-  .m-3 {
-    margin: calc(var(--spacing) * 3);
-  }
   .m-auto {
     margin: auto;
   }
-  .ms-3 {
-    margin-inline-start: calc(var(--spacing) * 3);
+  .mx-7 {
+    margin-inline: calc(var(--spacing) * 7);
   }
-  .ms-3\.5 {
-    margin-inline-start: calc(var(--spacing) * 3.5);
+  .mx-10 {
+    margin-inline: calc(var(--spacing) * 10);
   }
-  .-mr-9 {
-    margin-right: calc(var(--spacing) * -9);
+  .my-0\.5 {
+    margin-block: calc(var(--spacing) * 0.5);
   }
-  .mr-7 {
-    margin-right: calc(var(--spacing) * 7);
-  }
-  .mr-9 {
-    margin-right: calc(var(--spacing) * 9);
-  }
-  .mr-10 {
-    margin-right: calc(var(--spacing) * 10);
-  }
-  .mr-auto {
-    margin-right: auto;
-  }
-  .mb-0 {
-    margin-bottom: calc(var(--spacing) * 0);
-  }
-  .mb-0\.5 {
-    margin-bottom: calc(var(--spacing) * 0.5);
-  }
-  .mb-1 {
-    margin-bottom: calc(var(--spacing) * 1);
-  }
-  .mb-3 {
-    margin-bottom: calc(var(--spacing) * 3);
-  }
-  .mb-11 {
-    margin-bottom: calc(var(--spacing) * 11);
-  }
-  .-ml-9 {
-    margin-left: calc(var(--spacing) * -9);
-  }
-  .ml-7 {
-    margin-left: calc(var(--spacing) * 7);
-  }
-  .ml-9 {
-    margin-left: calc(var(--spacing) * 9);
-  }
-  .ml-10 {
-    margin-left: calc(var(--spacing) * 10);
-  }
-  .ml-auto {
-    margin-left: auto;
+  .mt-0\.5 {
+    margin-top: calc(var(--spacing) * 0.5);
   }
   .box-border {
     box-sizing: border-box;
@@ -550,17 +455,14 @@
   .aspect-square {
     aspect-ratio: 1 / 1;
   }
-  .h-30 {
-    height: calc(var(--spacing) * 30);
-  }
-  .h-31 {
-    height: calc(var(--spacing) * 31);
-  }
   .h-33 {
     height: calc(var(--spacing) * 33);
   }
   .h-screen {
     height: 100vh;
+  }
+  .max-h-6 {
+    max-height: calc(var(--spacing) * 6);
   }
   .max-h-none {
     max-height: none;
@@ -571,26 +473,14 @@
   .min-h-screen {
     min-height: 100vh;
   }
-  .w-1 {
-    width: calc(var(--spacing) * 1);
-  }
   .w-1\/2 {
     width: calc(1/2 * 100%);
   }
   .w-2xl {
     width: var(--container-2xl);
   }
-  .w-2xs {
-    width: var(--container-2xs);
-  }
-  .w-3 {
-    width: calc(var(--spacing) * 3);
-  }
-  .w-3\.5 {
-    width: calc(var(--spacing) * 3.5);
-  }
-  .w-3xl {
-    width: var(--container-3xl);
+  .w-full {
+    width: 100%;
   }
   .w-screen {
     width: 100vw;
@@ -624,6 +514,27 @@
   }
   .grow {
     flex-grow: 1;
+  }
+  .basis-1\/3 {
+    flex-basis: calc(1/3 * 100%);
+  }
+  .basis-1\/4 {
+    flex-basis: calc(1/4 * 100%);
+  }
+  .basis-1\/6 {
+    flex-basis: calc(1/6 * 100%);
+  }
+  .basis-1\/12 {
+    flex-basis: calc(1/12 * 100%);
+  }
+  .basis-3\/4 {
+    flex-basis: calc(3/4 * 100%);
+  }
+  .basis-5\/6 {
+    flex-basis: calc(5/6 * 100%);
+  }
+  .basis-11\/12 {
+    flex-basis: calc(11/12 * 100%);
   }
   .basis-auto {
     flex-basis: auto;
@@ -684,10 +595,6 @@
   .translate-full {
     --tw-translate-x: 100%;
     --tw-translate-y: 100%;
-    translate: var(--tw-translate-x) var(--tw-translate-y);
-  }
-  .-translate-x-1 {
-    --tw-translate-x: calc(var(--spacing) * -1);
     translate: var(--tw-translate-x) var(--tw-translate-y);
   }
   .-translate-x-1\/2 {
@@ -989,11 +896,8 @@
   .justify-items-stretch {
     justify-items: stretch;
   }
-  .gap-4 {
-    gap: calc(var(--spacing) * 4);
-  }
-  .gap-8 {
-    gap: calc(var(--spacing) * 8);
+  .gap-3 {
+    gap: calc(var(--spacing) * 3);
   }
   .gap-10 {
     gap: calc(var(--spacing) * 10);
@@ -1200,9 +1104,6 @@
     --tw-border-style: solid;
     border-style: solid;
   }
-  .border-b-black {
-    border-bottom-color: var(--color-black);
-  }
   .bg-\(--my_variable\) {
     background-color: var(--my_variable);
   }
@@ -1221,17 +1122,14 @@
   .bg-amber-50 {
     background-color: var(--color-amber-50);
   }
-  .bg-amber-100 {
-    background-color: var(--color-amber-100);
+  .bg-amber-800 {
+    background-color: var(--color-amber-800);
   }
-  .bg-amber-200 {
-    background-color: var(--color-amber-200);
+  .bg-blue-400 {
+    background-color: var(--color-blue-400);
   }
-  .bg-amber-500 {
-    background-color: var(--color-amber-500);
-  }
-  .bg-amber-700 {
-    background-color: var(--color-amber-700);
+  .bg-red-400 {
+    background-color: var(--color-red-400);
   }
   .bg-red-500 {
     background-color: var(--color-red-500);
@@ -1241,6 +1139,12 @@
   }
   .bg-red-500\/\[50\%\] {
     background-color: color-mix(in oklab, var(--color-red-500) 50%, transparent);
+  }
+  .bg-violet-500 {
+    background-color: var(--color-violet-500);
+  }
+  .bg-yellow-400 {
+    background-color: var(--color-yellow-400);
   }
   .-bg-conic {
     --tw-gradient-position: in oklab;
@@ -1408,17 +1312,17 @@
   .object-top {
     object-position: top;
   }
-  .p-2 {
-    padding: calc(var(--spacing) * 2);
+  .p-4 {
+    padding: calc(var(--spacing) * 4);
   }
-  .p-3 {
-    padding: calc(var(--spacing) * 3);
+  .px-1 {
+    padding-inline: calc(var(--spacing) * 1);
   }
-  .ps-3 {
-    padding-inline-start: calc(var(--spacing) * 3);
+  .pr-4 {
+    padding-right: calc(var(--spacing) * 4);
   }
-  .ps-3\.5 {
-    padding-inline-start: calc(var(--spacing) * 3.5);
+  .pb-2 {
+    padding-bottom: calc(var(--spacing) * 2);
   }
   .text-center {
     text-align: center;
@@ -2001,6 +1905,15 @@
   }
 }
 @import url('https://fonts.googleapis.com/css2?family=Mr+Dafoe&display=swap');
+h1 {
+  color: rgb(62, 62, 62);
+  font-size: x-large;
+  font-weight: bold;
+}
+h2 {
+  font-size: larger;
+  font-weight: bold;
+}
 .eckoofthefox {
   font-family: "Mr Dafoe", cursive;
   font-size: 3rem;
@@ -2012,12 +1925,21 @@
   margin-bottom: 0;
 }
 .eofsubline {
+  color: rgb(39, 39, 39);
   font-family: "Mr Dafoe", cursive;
   font-size: 1.5rem;
-  color: rgb(39, 39, 39);
+  font-weight: 100;
+  color: rgb(62, 62, 62);
   display: flex;
   justify-content: center;
-  margin-top: 0.15rem;
+  margin-top: -0.125rem;
+}
+.title-logo {
+  margin-top: 1rem;
+  height: 5rem;
+}
+.title-logo:hover {
+  height: 4.95rem;
 }
 @property --tw-translate-x {
   syntax: "*";
