--- a/css/styleoutput.css
+++ b/css/styleoutput.css
@@ -8,14 +8,8 @@
       "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
     --font-mono: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono",
       "Courier New", monospace;
-    --color-red-400: oklch(0.704 0.191 22.216);
     --color-red-500: oklch(0.637 0.237 25.331);
     --color-amber-50: oklch(0.987 0.022 95.277);
-    --color-amber-100: oklch(0.962 0.059 95.617);
-    --color-amber-800: oklch(0.473 0.137 46.201);
-    --color-yellow-400: oklch(0.852 0.199 91.936);
-    --color-blue-400: oklch(0.707 0.165 254.624);
-    --color-violet-500: oklch(0.606 0.25 292.717);
     --spacing: 0.25rem;
     --container-2xl: 42rem;
     --text-lg: 1.125rem;
@@ -371,6 +365,9 @@
   .mx-10 {
     margin-inline: calc(var(--spacing) * 10);
   }
+  .mx-auto {
+    margin-inline: auto;
+  }
   .my-0\.5 {
     margin-block: calc(var(--spacing) * 0.5);
   }
@@ -482,8 +479,8 @@
   .max-h-6 {
     max-height: calc(var(--spacing) * 6);
   }
-  .max-h-30 {
-    max-height: calc(var(--spacing) * 30);
+  .max-h-\[50\%\] {
+    max-height: 50%;
   }
   .max-h-none {
     max-height: none;
@@ -503,14 +500,14 @@
   .w-40 {
     width: calc(var(--spacing) * 40);
   }
-  .w-full {
-    width: 100%;
-  }
   .w-screen {
     width: 100vw;
   }
-  .max-w-60 {
-    max-width: calc(var(--spacing) * 60);
+  .max-w-\[50\%\] {
+    max-width: 50%;
+  }
+  .max-w-\[75\%\] {
+    max-width: 75%;
   }
   .max-w-none {
     max-width: none;
@@ -547,6 +544,9 @@
   }
   .basis-1\/4 {
     flex-basis: calc(1/4 * 100%);
+  }
+  .basis-1\/5 {
+    flex-basis: calc(1/5 * 100%);
   }
   .basis-1\/6 {
     flex-basis: calc(1/6 * 100%);
@@ -935,6 +935,9 @@
   .gap-3 {
     gap: calc(var(--spacing) * 3);
   }
+  .gap-8 {
+    gap: calc(var(--spacing) * 8);
+  }
   .gap-10 {
     gap: calc(var(--spacing) * 10);
   }
@@ -1161,18 +1164,6 @@
   .bg-amber-50 {
     background-color: var(--color-amber-50);
   }
-  .bg-amber-100 {
-    background-color: var(--color-amber-100);
-  }
-  .bg-amber-800 {
-    background-color: var(--color-amber-800);
-  }
-  .bg-blue-400 {
-    background-color: var(--color-blue-400);
-  }
-  .bg-red-400 {
-    background-color: var(--color-red-400);
-  }
   .bg-red-500 {
     background-color: var(--color-red-500);
   }
@@ -1181,12 +1172,6 @@
   }
   .bg-red-500\/\[50\%\] {
     background-color: color-mix(in oklab, var(--color-red-500) 50%, transparent);
-  }
-  .bg-violet-500 {
-    background-color: var(--color-violet-500);
-  }
-  .bg-yellow-400 {
-    background-color: var(--color-yellow-400);
   }
   .-bg-conic {
     --tw-gradient-position: in oklab;
@@ -1984,6 +1969,13 @@ i {
   border-bottom: 1px solid rgb(39, 39, 39);
   margin-bottom: 0;
 }
+p {
+  text-indent: 3rem;
+}
+p::first-letter {
+  font-weight: 600;
+  font-size: 2rem;
+}
 .eofsubline {
   color: rgb(39, 39, 39);
   font-family: "Mr Dafoe", cursive;
@@ -2002,13 +1994,13 @@ i {
   height: 4.95rem;
 }
 .author {
-  background-color: aquamarine;
   font-size: 1.25rem;
   font-weight: bold;
   margin-left: auto;
+  display: flex;
+  justify-content: end;
 }
 .minor-article {
-  background-color: aquamarine;
   display: flex;
   flex-direction: row;
   overflow-x: hidden;
@@ -2018,15 +2010,14 @@ i {
 }
 .minor-article h2 {
   align-content: center;
-  background-color: red;
   width: 50%;
-  transition: width 500ms, visibility 500ms;
+  transition: width 800ms, visibility 500ms;
 }
 .minor-article div {
-  background-color: blueviolet;
+  align-content: center;
   width: 50%;
   visibility: hidden;
-  transition: width 500ms, visibility 2ms;
+  transition: visibility 1s;
 }
 .minor-article:hover {
   h2 {
