--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,11 @@ h2 {
     font-weight: bold;
 }
 
+h3 {
+    font-size: 1.5rem;
+    font-weight: bold;
+}
+
 i {
     font-size: 1rem;
 }
@@ -30,7 +35,7 @@ i {
 }
 
 p {
-    text-indent: 3rem;
+    text-indent: 2rem;
 }
 p::first-letter {
     font-weight: 600;
