--- a/css/style.css
+++ b/css/style.css
@@ -23,3 +23,30 @@ h3 {
 i {
     font-size: 1rem;
 }
+
+#hamburger-menu {
+    align-content: center;
+    text-align: right;
+    ul {
+        display: none;
+    }
+    a {
+        text-decoration: none;
+        color: rgb(62, 62, 62);
+    }
+}
+
+
+#hamburger-menu:hover {
+    ul {
+        display: block;
+        position: absolute;
+        right: 1px;
+        transform: translate(0, 0);
+        background-color: var(--color-amber-50);
+        border: 1px solid rgb(62, 62, 62);
+        border-top-left-radius: 0.5rem;
+        border-bottom-left-radius: 0.5rem;
+        padding: 0.5rem;
+    }
+}
