--- a/css/style.css
+++ b/css/style.css
@@ -34,6 +34,7 @@ p {
 #hamburger-menu {
     align-content: center;
     text-align: right;
+    padding-right: 0.5rem;
     ul {
         display: none;
     }
