--- a/css/styleoutput.css
+++ b/css/styleoutput.css
@@ -358,9 +358,6 @@
       max-width: 96rem !important;
     }
   }
-  .mx-0 {
-    margin-inline: calc(var(--spacing) * 0);
-  }
   .mx-0\.5 {
     margin-inline: calc(var(--spacing) * 0.5);
   }
@@ -463,17 +460,8 @@
   .aspect-square {
     aspect-ratio: 1 / 1;
   }
-  .h-3 {
-    height: calc(var(--spacing) * 3);
-  }
   .h-3\/7 {
     height: calc(3/7 * 100%);
-  }
-  .h-3\/10 {
-    height: calc(3/10 * 100%);
-  }
-  .h-3\/11 {
-    height: calc(3/11 * 100%);
   }
   .h-16 {
     height: calc(var(--spacing) * 16);
@@ -505,29 +493,11 @@
   .min-h-screen {
     min-height: 100vh;
   }
-  .w-1 {
-    width: calc(var(--spacing) * 1);
-  }
   .w-1\/2 {
     width: calc(1/2 * 100%);
   }
-  .w-1\/3 {
-    width: calc(1/3 * 100%);
-  }
-  .w-2 {
-    width: calc(var(--spacing) * 2);
-  }
-  .w-2\/5 {
-    width: calc(2/5 * 100%);
-  }
-  .w-2\/6 {
-    width: calc(2/6 * 100%);
-  }
   .w-2\/7 {
     width: calc(2/7 * 100%);
-  }
-  .w-3 {
-    width: calc(var(--spacing) * 3);
   }
   .w-3\/7 {
     width: calc(3/7 * 100%);
@@ -541,14 +511,8 @@
   .w-screen {
     width: 100vw;
   }
-  .max-w-1 {
-    max-width: calc(var(--spacing) * 1);
-  }
   .max-w-1\/5 {
     max-width: calc(1/5 * 100%);
-  }
-  .max-w-3 {
-    max-width: calc(var(--spacing) * 3);
   }
   .max-w-3\/5 {
     max-width: calc(3/5 * 100%);
@@ -947,12 +911,6 @@
   }
   .justify-items-stretch {
     justify-items: stretch;
-  }
-  .gap-0 {
-    gap: calc(var(--spacing) * 0);
-  }
-  .gap-0\.5 {
-    gap: calc(var(--spacing) * 0.5);
   }
   .gap-1 {
     gap: calc(var(--spacing) * 1);
@@ -1388,9 +1346,6 @@
   .px-2 {
     padding-inline: calc(var(--spacing) * 2);
   }
-  .py-0 {
-    padding-block: calc(var(--spacing) * 0);
-  }
   .py-0\.5 {
     padding-block: calc(var(--spacing) * 0.5);
   }
@@ -1457,10 +1412,6 @@
   .leading-none {
     --tw-leading: 1;
     line-height: 1;
-  }
-  .font-\[0\.75rem\] {
-    --tw-font-weight: 0.75rem;
-    font-weight: 0.75rem;
   }
   .font-\[1\.25rem\] {
     --tw-font-weight: 1.25rem;
@@ -2033,26 +1984,6 @@
       display: flex;
     }
   }
-  .md\:w-2\/3 {
-    @media (width >= 48rem) {
-      width: calc(2/3 * 100%);
-    }
-  }
-  .md\:w-3\/5 {
-    @media (width >= 48rem) {
-      width: calc(3/5 * 100%);
-    }
-  }
-  .md\:w-3\/6 {
-    @media (width >= 48rem) {
-      width: calc(3/6 * 100%);
-    }
-  }
-  .md\:w-4\/7 {
-    @media (width >= 48rem) {
-      width: calc(4/7 * 100%);
-    }
-  }
   .md\:w-5\/7 {
     @media (width >= 48rem) {
       width: calc(5/7 * 100%);
@@ -2061,6 +1992,16 @@
   .md\:flex-row-reverse {
     @media (width >= 48rem) {
       flex-direction: row-reverse;
+    }
+  }
+  .lg\:h-28 {
+    @media (width >= 64rem) {
+      height: calc(var(--spacing) * 28);
+    }
+  }
+  .lg\:max-h-28 {
+    @media (width >= 64rem) {
+      max-height: calc(var(--spacing) * 28);
     }
   }
 }
@@ -2110,6 +2051,20 @@ p {
     border-top-left-radius: 0.5rem;
     border-bottom-left-radius: 0.5rem;
     padding: 0.5rem;
+  }
+}
+@media only screen and (min-width: 1024px) {
+  #hamburger-menu {
+    svg {
+      visibility: hidden;
+    }
+  }
+  header:hover {
+    #navbar {
+      ul {
+        display: block;
+      }
+    }
   }
 }
 .author {
