--- a/css/styleoutput.css
+++ b/css/styleoutput.css
@@ -9,13 +9,7 @@
     --font-mono: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono",
       "Courier New", monospace;
     --color-red-500: oklch(0.637 0.237 25.331);
-    --color-red-600: oklch(0.577 0.245 27.325);
-    --color-red-700: oklch(0.505 0.213 27.518);
-    --color-red-900: oklch(0.396 0.141 25.723);
     --color-amber-50: oklch(0.987 0.022 95.277);
-    --color-amber-800: oklch(0.473 0.137 46.201);
-    --color-yellow-300: oklch(0.905 0.182 98.111);
-    --color-blue-700: oklch(0.488 0.243 264.376);
     --spacing: 0.25rem;
     --text-xs: 0.75rem;
     --text-xs--line-height: calc(1 / 0.75);
@@ -358,17 +352,8 @@
       max-width: 96rem !important;
     }
   }
-  .mx-0 {
-    margin-inline: calc(var(--spacing) * 0);
-  }
   .mx-0\.5 {
     margin-inline: calc(var(--spacing) * 0.5);
-  }
-  .mx-1 {
-    margin-inline: calc(var(--spacing) * 1);
-  }
-  .mx-2 {
-    margin-inline: calc(var(--spacing) * 2);
   }
   .mx-auto {
     margin-inline: auto;
@@ -378,9 +363,6 @@
   }
   .my-0\.5 {
     margin-block: calc(var(--spacing) * 0.5);
-  }
-  .my-1 {
-    margin-block: calc(var(--spacing) * 1);
   }
   .my-2 {
     margin-block: calc(var(--spacing) * 2);
@@ -478,26 +460,8 @@
   .aspect-square {
     aspect-ratio: 1 / 1;
   }
-  .h-1 {
-    height: calc(var(--spacing) * 1);
-  }
-  .h-1\/1 {
-    height: calc(1/1 * 100%);
-  }
-  .h-3 {
-    height: calc(var(--spacing) * 3);
-  }
-  .h-3\/7 {
-    height: calc(3/7 * 100%);
-  }
   .h-16 {
     height: calc(var(--spacing) * 16);
-  }
-  .h-50 {
-    height: calc(var(--spacing) * 50);
-  }
-  .h-full {
-    height: 100%;
   }
   .h-screen {
     height: 100vh;
@@ -523,29 +487,14 @@
   .min-h-screen {
     min-height: 100vh;
   }
-  .w-1 {
-    width: calc(var(--spacing) * 1);
-  }
   .w-1\/2 {
     width: calc(1/2 * 100%);
-  }
-  .w-2 {
-    width: calc(var(--spacing) * 2);
-  }
-  .w-2\/7 {
-    width: calc(2/7 * 100%);
   }
   .w-2\/9 {
     width: calc(2/9 * 100%);
   }
   .w-2\/17 {
     width: calc(2/17 * 100%);
-  }
-  .w-3 {
-    width: calc(var(--spacing) * 3);
-  }
-  .w-3\/7 {
-    width: calc(3/7 * 100%);
   }
   .w-16 {
     width: calc(var(--spacing) * 16);
@@ -556,14 +505,8 @@
   .w-screen {
     width: 100vw;
   }
-  .max-w-1 {
-    max-width: calc(var(--spacing) * 1);
-  }
   .max-w-1\/5 {
     max-width: calc(1/5 * 100%);
-  }
-  .max-w-3 {
-    max-width: calc(var(--spacing) * 3);
   }
   .max-w-3\/5 {
     max-width: calc(3/5 * 100%);
@@ -1201,12 +1144,6 @@
   .bg-amber-50 {
     background-color: var(--color-amber-50);
   }
-  .bg-amber-800 {
-    background-color: var(--color-amber-800);
-  }
-  .bg-blue-700 {
-    background-color: var(--color-blue-700);
-  }
   .bg-red-500 {
     background-color: var(--color-red-500);
   }
@@ -1215,18 +1152,6 @@
   }
   .bg-red-500\/\[50\%\] {
     background-color: color-mix(in oklab, var(--color-red-500) 50%, transparent);
-  }
-  .bg-red-600 {
-    background-color: var(--color-red-600);
-  }
-  .bg-red-700 {
-    background-color: var(--color-red-700);
-  }
-  .bg-red-900 {
-    background-color: var(--color-red-900);
-  }
-  .bg-yellow-300 {
-    background-color: var(--color-yellow-300);
   }
   .-bg-conic {
     --tw-gradient-position: in oklab;
@@ -1394,17 +1319,8 @@
   .object-top {
     object-position: top;
   }
-  .px-0 {
-    padding-inline: calc(var(--spacing) * 0);
-  }
-  .px-0\.5 {
-    padding-inline: calc(var(--spacing) * 0.5);
-  }
   .px-2 {
     padding-inline: calc(var(--spacing) * 2);
-  }
-  .py-0 {
-    padding-block: calc(var(--spacing) * 0);
   }
   .py-0\.5 {
     padding-block: calc(var(--spacing) * 0.5);
@@ -1468,9 +1384,6 @@
   .text-xs {
     font-size: var(--text-xs);
     line-height: var(--tw-leading, var(--text-xs--line-height));
-  }
-  .text-\[0\.5rem\] {
-    font-size: 0.5rem;
   }
   .leading-none {
     --tw-leading: 1;
@@ -1997,13 +1910,6 @@
   .transform-view {
     transform-box: view-box;
   }
-  .group-hover\:block {
-    &:is(:where(.group):hover *) {
-      @media (hover: hover) {
-        display: block;
-      }
-    }
-  }
   .group-hover\:bg-\[rgba\(62\,62\,62\,0\.5\)\] {
     &:is(:where(.group):hover *) {
       @media (hover: hover) {
@@ -2016,20 +1922,6 @@
       @media (hover: hover) {
         border-style: var(--tw-border-style);
         border-width: 2px;
-      }
-    }
-  }
-  .max-lg\:hidden {
-    @media (width < 64rem) {
-      display: none;
-    }
-  }
-  .max-lg\:group-hover\:block {
-    @media (width < 64rem) {
-      &:is(:where(.group):hover *) {
-        @media (hover: hover) {
-          display: block;
-        }
       }
     }
   }
@@ -2082,19 +1974,9 @@
       display: flex;
     }
   }
-  .md\:w-5\/7 {
-    @media (width >= 48rem) {
-      width: calc(5/7 * 100%);
-    }
-  }
-  .md\:flex-row-reverse {
-    @media (width >= 48rem) {
-      flex-direction: row-reverse;
-    }
-  }
-  .lg\:block {
+  .lg\:mx-auto {
     @media (width >= 64rem) {
-      display: block;
+      margin-inline: auto;
     }
   }
   .lg\:flex {
@@ -2112,16 +1994,6 @@
       max-height: calc(var(--spacing) * 28);
     }
   }
-  .lg\:max-h-44 {
-    @media (width >= 64rem) {
-      max-height: calc(var(--spacing) * 44);
-    }
-  }
-  .lg\:max-h-46 {
-    @media (width >= 64rem) {
-      max-height: calc(var(--spacing) * 46);
-    }
-  }
   .lg\:max-h-48 {
     @media (width >= 64rem) {
       max-height: calc(var(--spacing) * 48);
@@ -2130,21 +2002,6 @@
   .lg\:w-1\/4 {
     @media (width >= 64rem) {
       width: calc(1/4 * 100%);
-    }
-  }
-  .lg\:w-1\/9 {
-    @media (width >= 64rem) {
-      width: calc(1/9 * 100%);
-    }
-  }
-  .lg\:w-1\/17 {
-    @media (width >= 64rem) {
-      width: calc(1/17 * 100%);
-    }
-  }
-  .lg\:w-1\/18 {
-    @media (width >= 64rem) {
-      width: calc(1/18 * 100%);
     }
   }
   .lg\:w-2\/17 {
@@ -2157,6 +2014,16 @@
       width: calc(3/4 * 100%);
     }
   }
+  .lg\:max-w-\[1300px\] {
+    @media (width >= 64rem) {
+      max-width: 1300px;
+    }
+  }
+  .lg\:columns-3 {
+    @media (width >= 64rem) {
+      columns: 3;
+    }
+  }
   .lg\:flex-row {
     @media (width >= 64rem) {
       flex-direction: row;
@@ -2165,6 +2032,23 @@
   .lg\:gap-1 {
     @media (width >= 64rem) {
       gap: calc(var(--spacing) * 1);
+    }
+  }
+  .lg\:gap-4 {
+    @media (width >= 64rem) {
+      gap: calc(var(--spacing) * 4);
+    }
+  }
+  .lg\:border-0 {
+    @media (width >= 64rem) {
+      border-style: var(--tw-border-style);
+      border-width: 0px;
+    }
+  }
+  .lg\:border-t {
+    @media (width >= 64rem) {
+      border-top-style: var(--tw-border-style);
+      border-top-width: 1px;
     }
   }
   .lg\:border-r {
@@ -2183,33 +2067,9 @@
       padding-right: calc(var(--spacing) * 0.5);
     }
   }
-  .min-lg\:group-hover\:block {
-    @media (width >= 64rem) {
-      &:is(:where(.group):hover *) {
-        @media (hover: hover) {
-          display: block;
-        }
-      }
-    }
-  }
-  .xl\:w-1\/4 {
-    @media (width >= 80rem) {
-      width: calc(1/4 * 100%);
-    }
-  }
-  .xl\:w-1\/5 {
-    @media (width >= 80rem) {
-      width: calc(1/5 * 100%);
-    }
-  }
   .xl\:w-2\/9 {
     @media (width >= 80rem) {
       width: calc(2/9 * 100%);
-    }
-  }
-  .xl\:w-2\/11 {
-    @media (width >= 80rem) {
-      width: calc(2/11 * 100%);
     }
   }
 }
@@ -2222,8 +2082,11 @@ h1 {
 h2 {
   color: rgb(62, 62, 62);
   font-size: 1.75rem;
-  font-weight: bold;
+  font-weight: 700;
   text-align: center;
+}
+h2:hover {
+  text-decoration: underline;
 }
 h3 {
   color: rgb(62, 62, 62);
@@ -2268,15 +2131,26 @@ p {
     }
   }
   header:hover {
-    #navbar {
+    #hamburger-menu {
       ul {
-        display: block;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-around;
+        gap: 2rem;
+        position: absolute;
+        left: 50%;
+        transform: translate(-50%, 1.5rem);
+        background-color: var(--color-amber-50);
+        border: 1px solid rgb(62, 62, 62);
+        border-radius: 0.5rem;
+        padding: 0.5rem;
+        min-width: fit-content;
+        max-width: fit-content;
       }
     }
   }
 }
 .author {
-  background-color: gray;
   font-family: "Mr Dafoe", cursive;
   font-size: 1.5rem;
   justify-self: end;
